--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     gtag('config', 'G-5V9S2Q8DBF');
   </script>
 <body>
-  <!-- 新增：启动页面，打字动画显示本站源代码，持续20秒后自动跳转 -->
+  <!-- 启动页面：打字动画显示本站源代码，持续20秒后自动跳转 -->
   <div id="splashScreen">加载中...</div>
 
   <div class="container" id="container">
@@ -287,9 +287,9 @@
     <div class="section" id="section2" style="animation-delay: 0.3s;">
       <h1>请输入您的名字</h1>
       <div class="input-container">
-        <input type="text" id="nameInput" placeholder="在此输入您的名字">
+        <input type="text" id="nameInput" placeholder="在此输入您的名字" oninput="checkNameInput()">
       </div>
-      <button onclick="nextSlide()">下一页</button>
+      <button onclick="nextSlide()" id="nameNextButton" disabled>下一页</button>
     </div>
 
     <!-- 新页面2：欢迎页面，根据前一页输入的姓名显示欢迎信息 -->
@@ -599,6 +599,12 @@
 
     function handleEnter(event) {
       if (event.key === "Enter") validatePassword();
+    }
+
+    // 新增：检查姓名输入是否为空，更新按钮状态
+    function checkNameInput() {
+      const name = document.getElementById("nameInput").value;
+      document.getElementById("nameNextButton").disabled = (name.trim() === "");
     }
 
     // 小游戏相关代码
