--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>祝李老师毕业快乐！</title>
+  <title>祝李老师毕业快乐！！</title>
   <style>
     :root {
       --primary-color: #00bfff; /* 天蓝色 */
