--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="zh-CN">
 <head>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5V9S2Q8DBF"></script>
+  <script async 
+src="https://www.googletagmanager.com/gtag/js?id=G-5V9S2Q8DBF"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -255,9 +256,80 @@
       margin-top: 10px;
     }
   </style>
+  <style>
+    /* Chat container styling */
+    #section16 {
+      position: relative;
+      padding-bottom: 200px; /* 给聊天框留出空间 */
+    }
+    #chat-container {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 10px;
+      box-sizing: border-box;
+    }
+    #chat-messages {
+      max-height: 150px;
+      overflow-y: auto;
+      margin-bottom: 10px;
+    }
+    #chat-messages .message {
+      display: flex;
+      width: 100%;
+      margin: 5px 0;
+    }
+    #chat-messages .user {
+      justify-content: flex-end;
+    }
+    #chat-messages .bot {
+      justify-content: flex-start;
+    }
+    #chat-messages .message .text {
+      padding: 8px 12px;
+      border-radius: 12px;
+      max-width: 70%;
+      word-break: break-word;
+    }
+    #chat-messages .user .text {
+      background: #00bfff;
+      color: #fff;
+    }
+    #chat-messages .bot .text {
+      background: #fff;
+      color: #000;
+    }
+    #chat-input-area {
+      display: flex;
+      border-top: 1px solid #ccc;
+      padding-top: 10px;
+    }
+    #chat-input {
+      flex: 1;
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      outline: none;
+      margin-right: 10px;
+    }
+    #chat-input:focus {
+      border-color: #00bfff;
+    }
+    #send-button {
+      padding: 8px 16px;
+      background: #00bfff;
+      border: none;
+      border-radius: 5px;
+      color: #fff;
+      margin: 0;
+    }
+  </style>
 </head>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5V9S2Q8DBF"></script>
+  <script async 
+src="https://www.googletagmanager.com/gtag/js?id=G-5V9S2Q8DBF"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -287,7 +359,8 @@
     <div class="section" id="section2" style="animation-delay: 0.3s;">
       <h1>请输入您的名字</h1>
       <div class="input-container">
-        <input type="text" id="nameInput" placeholder="在此输入您的名字" oninput="checkNameInput()">
+        <input type="text" id="nameInput" placeholder="在此输入您的名字" 
+oninput="checkNameInput()">
       </div>
       <button onclick="nextSlide()" id="nameNextButton" disabled>下一页</button>
     </div>
@@ -302,17 +375,19 @@
     <div class="section" id="section4" style="animation-delay: 0.9s;">
       <h1>先看一下你在哪里</h1>
       <p id="locationStatus">正在获取您的位置...</p>
-      <div id="mapWrapper" style="width:100%; margin:20px 0; position:relative;">
+      <div id="mapWrapper" style="width:100%; margin:20px 0; 
+position:relative;">
         <div id="map" style="width:100%; height:400px; display:none;"></div>
       </div>
-      <button onclick="nextSlide()" style="position:relative; z-index:2;">下一页</button>
+      <button onclick="nextSlide()" style="position:relative; 
+z-index:2;">下一页</button>
     </div>
 
     <!-- 原摇手机互动页面（原 section3，现为 section5） -->
     <div class="section" id="section5" style="animation-delay: 1.2s;">
       <h1>试试摇一摇手机</h1>
       <p id="blessingText" style="display: none;">毕业不是终点，而是一个新的起点。
-     前路光明，一切顺利。</p>
+前路光明，一切顺利。</p>
       <button id="nextButtonSensor" onclick="nextSlide()" disabled>下一页</button>
     </div>
 
@@ -320,7 +395,8 @@
     <div class="section" id="section6" style="animation-delay: 1.5s;">
       <h1>拍个照</h1>
       <p>请允许调用摄像头进行拍照</p>
-      <video id="video" width="320" height="240" autoplay playsinline style="border:1px solid #ccc;"></video>
+      <video id="video" width="320" height="240" autoplay playsinline 
+style="border:1px solid #ccc;"></video>
       <br>
       <button id="captureButton" onclick="capturePhoto()">拍照</button>
       <canvas id="photoCanvas" width="320" height="240" style="display:none;"></canvas>
@@ -349,10 +425,12 @@
     <!-- 人机验证页面（原 section6，现为 section8） -->
     <div class="section" id="section8" style="animation-delay: 2.1s;">
       <h1>人机验证注意</h1>
-      <p>我确认，我已知晓了必要的隐私披露声明并给予最终用户授权，同意网站所有者收集用户的数据并进行相关处理，包括将此类数据与 Google Analytics 从网站和/或应用媒体资源收集的访问信息相关联。</p>
+      <p>我确认，我已知晓了必要的隐私披露声明并给予最终用户授权，同意网站所有者收集用户的数据并进行相关处理，包括将此类数据与 Google 
+Analytics 从网站和/或应用媒体资源收集的访问信息相关联。</p>
       <p>点击即代表您同意上述内容</p>
       <div class="checkbox-container">
-        <input type="checkbox" id="confirm1" onchange="enableNextButton('confirm1', 'nextButton1')"> 
+        <input type="checkbox" id="confirm1" 
+onchange="enableNextButton('confirm1', 'nextButton1')"> 
         <label for="confirm1">已确认</label>
       </div>
       <button onclick="nextSlide()" id="nextButton1" disabled>下一页</button>
@@ -364,7 +442,8 @@
       <p>*因为买不起私人服务器所以用公共网络搭建*</p>
       <p>*为避免此公共网站遭受恶意攻击登录所以设置密码*</p>
       <div class="input-container">
-        <input type="password" id="passwordInput" placeholder="在此输入密码" oninput="validatePassword()" onkeypress="handleEnter(event)">
+        <input type="password" id="passwordInput" placeholder="在此输入密码" 
+oninput="validatePassword()" onkeypress="handleEnter(event)">
       </div>
       <button onclick="nextSlide()" id="nextButton2" disabled>下一页</button>
     </div>
@@ -380,7 +459,8 @@
       <p>...第一</p>
       <p>是我们学习的榜样</p>
       <div class="checkbox-container">
-        <input type="checkbox" id="confirm2" onchange="enableNextButton('confirm2', 'nextButton3')"> 
+        <input type="checkbox" id="confirm2" 
+onchange="enableNextButton('confirm2', 'nextButton3')"> 
         <label for="confirm2">已确认</label>
       </div>
       <button onclick="nextSlide()" id="nextButton3" disabled>下一页</button>
@@ -393,7 +473,8 @@
       <p>家人闲坐，灯火可亲。</p>
       <p>前路光明，一切顺利。</p>
       <div class="checkbox-container">
-        <input type="checkbox" id="confirm3" onchange="enableNextButton('confirm3', 'nextButton4')"> 
+        <input type="checkbox" id="confirm3" 
+onchange="enableNextButton('confirm3', 'nextButton4')"> 
         <label for="confirm3">已确认</label>
       </div>
       <button onclick="nextSlide()" id="nextButton4" disabled>下一页</button>
@@ -445,6 +526,13 @@
       <p>我先想想这里放点什么照片</p>
       <button onclick="prevSlide()">上一页</button>
       <button onclick="goToHome()">回到首页</button>
+      <div id="chat-container">
+        <div id="chat-messages"></div>
+        <div id="chat-input-area">
+          <input id="chat-input" type="text" placeholder="请输入消息" />
+          <button id="send-button">发送</button>
+        </div>
+      </div>
     </div>
 
     <div class="footer">
@@ -478,7 +566,8 @@
           typeWriter(text, splash, 20000);
         })
         .catch(err => {
-          document.getElementById('splashScreen').textContent = "加载源代码失败：" + err;
+          document.getElementById('splashScreen').textContent = "加载源代码失败：" + 
+err;
         });
       setTimeout(() => {
         const splash = document.getElementById('splashScreen');
@@ -590,11 +679,13 @@
     }
 
     function enableNextButton(checkboxId, buttonId) {
-      document.getElementById(buttonId).disabled = !document.getElementById(checkboxId).checked;
+      document.getElementById(buttonId).disabled = 
+!document.getElementById(checkboxId).checked;
     }
 
     function validatePassword() {
-      document.getElementById("nextButton2").disabled = document.getElementById("passwordInput").value !== "04240417";
+      document.getElementById("nextButton2").disabled = 
+document.getElementById("passwordInput").value !== "04240417";
     }
 
     function handleEnter(event) {
@@ -779,5 +870,41 @@
       animate();
     }
   </script>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const chatInput = document.getElementById('chat-input');
+    const sendButton = document.getElementById('send-button');
+    const chatMessages = document.getElementById('chat-messages');
+    if (chatInput && sendButton && chatMessages) {
+      function appendMessage(text, className) {
+        const msgDiv = document.createElement('div');
+        msgDiv.className = 'message ' + className;
+        const textDiv = document.createElement('div');
+        textDiv.className = 'text';
+        textDiv.textContent = text;
+        msgDiv.appendChild(textDiv);
+        chatMessages.appendChild(msgDiv);
+        chatMessages.scrollTop = chatMessages.scrollHeight;
+      }
+      function sendMessage() {
+        const text = chatInput.value.trim();
+        if (text === '') return;
+        appendMessage(text, 'user');
+        chatInput.value = '';
+        const responses = ["再议。", "我不太明白，请联系开发者。", "我不太明白，请你自己解决。"];
+        const reply = responses[Math.floor(Math.random() * responses.length)];
+        setTimeout(() => {
+          appendMessage(reply, 'bot');
+        }, 500);
+      }
+      sendButton.addEventListener('click', sendMessage);
+      chatInput.addEventListener('keydown', function(event) {
+        if (event.key === 'Enter') {
+          sendMessage();
+        }
+      });
+    }
+  });
+</script>
 </body>
 </html>
