--- a/index.html
+++ b/index.html
@@ -344,9 +344,9 @@ src="https://www.googletagmanager.com/gtag/js?id=G-5V9S2Q8DBF"></script>
     <!-- 首页（原 section1） -->
     <div class="section" id="section1">
       <h1>祝李老师毕业快乐！🎓🎉</h1>
-      <p>From 甘弦朋 邓杰</p>
+      <p>From 甘弦朋 </p>
       <p>Website start time 2025/3/16</p>
-      <p>Last updated time  2025/4/07</p>
+      <p>Last updated time  2025/5/23</p>
       <p>请给予手机所有权限</p>
       <p>否则无法进行下一步</p>
       <p>*仅支持iOS16以上版本*</p>
@@ -373,7 +373,7 @@ oninput="checkNameInput()">
 
     <!-- 定位页面（原 section2，现为 section4） -->
     <div class="section" id="section4" style="animation-delay: 0.9s;">
-      <h1>先看一下你在哪里</h1>
+      <h1>确认你的位置</h1>
       <p id="locationStatus">正在获取您的位置...</p>
       <div id="mapWrapper" style="width:100%; margin:20px 0; 
 position:relative;">
@@ -406,7 +406,7 @@ style="border:1px solid #ccc;"></video>
 
     <!-- 小游戏页面（原 section5，现为 section7） -->
     <div class="section" id="section7" style="animation-delay: 1.8s;">
-      <h1>等待时活动下手指</h1>
+      <h1>请等待</h1>
       <p>等待数据上传谷歌云服务器..</p>
       <div class="progress-container">
         <div class="progress-bar"></div>
