--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 function sendMessage() {
   const input = document.getElementById("chatInput");
   const chatBox = document.getElementById("chatBox");
-  const userName = document.getElementById("nameInput").value || "用户";
+  const userName = document.getElementById("nameInput")?.value || "用户";
   const userMessage = input.value.trim();
   if (!userMessage) return;
 
@@ -42,7 +42,7 @@ function sendMessage() {
 function sendMessage() {
   const input = document.getElementById("chatInput");
   const chatBox = document.getElementById("chatBox");
-  const userName = document.getElementById("nameInput").value || "用户";
+  const userName = document.getElementById("nameInput")?.value || "用户";
   const userMessage = input.value.trim();
   if (!userMessage) return;
 
@@ -321,7 +321,7 @@ function sendMessage() {
 function sendMessage() {
   const input = document.getElementById("chatInput");
   const chatBox = document.getElementById("chatBox");
-  const userName = document.getElementById("nameInput").value || "用户";
+  const userName = document.getElementById("nameInput")?.value || "用户";
   const userMessage = input.value.trim();
   if (!userMessage) return;
 
@@ -357,7 +357,7 @@ function sendMessage() {
 function sendMessage() {
   const input = document.getElementById("chatInput");
   const chatBox = document.getElementById("chatBox");
-  const userName = document.getElementById("nameInput").value || "用户";
+  const userName = document.getElementById("nameInput")?.value || "用户";
   const userMessage = input.value.trim();
   if (!userMessage) return;
 
@@ -558,22 +558,31 @@ function sendMessage() {
       <p>动画改进与优化: GAN</p>
       <p>文字来源: GAN DENG</p>
       <p>图片来源: GAN DENG</p>
+      
+      <div id="chatBox" style="width: 80%; max-width: 600px; height: 400px; background: rgba(255,255,255,0.15); border-radius: 10px; overflow-y: auto; padding: 15px; box-shadow: 0 0 10px rgba(0,0,0,0.3); margin: 20px auto; color: #fff; font-size: 16px;"></div>
+
+      <div style="display: flex; justify-content: center; align-items: center; margin-top: 10px; gap: 10px;">
+        <input id="chatInput" type="text" placeholder="输入你的消息..." style="flex:1; padding: 10px; border-radius: 5px; border: none; font-size: 16px; width: 300px;">
+        <button onclick="sendMessage()" style="padding: 10px 20px; border-radius: 5px; background-color: var(--primary-color); color: white; border: none; font-size: 16px; cursor: pointer;">发送</button>
+      </div>
+
       <button onclick="prevSlide()">上一页</button>
       <button onclick="nextSlide()">不要点我</button>
     </div>
 
     <!-- 彩蛋页面（原 section14，现为 section16） -->
-<div id="chatBox" style="width: 80%; max-width: 600px; height: 400px; background: rgba(255,255,255,0.15); border-radius: 10px; overflow-y: auto; padding: 15px; box-shadow: 0 0 10px rgba(0,0,0,0.3); margin: 20px auto; color: #fff; font-size: 16px;"></div>
-
-<div style="display: flex; justify-content: center; align-items: center; margin-top: 10px; gap: 10px;">
-  <input id="chatInput" type="text" placeholder="输入你的消息..." style="flex:1; padding: 10px; border-radius: 5px; border: none; font-size: 16px; width: 300px;">
-  <button onclick="sendMessage()" style="padding: 10px 20px; border-radius: 5px; background-color: var(--primary-color); color: white; border: none; font-size: 16px; cursor: pointer;">发送</button>
-</div>
-
     <div class="section" id="section16" style="animation-delay: 4.5s;">
       <h1>彩蛋</h1>
       <p>AI小甘对话自训练数据.docx</p>
       <p>此处将接入小甘自制的AI模型对话0.2.6</p>
+      
+      <div id="chatBox" style="width: 80%; max-width: 600px; height: 400px; background: rgba(255,255,255,0.15); border-radius: 10px; overflow-y: auto; padding: 15px; box-shadow: 0 0 10px rgba(0,0,0,0.3); margin: 20px auto; color: #fff; font-size: 16px;"></div>
+
+      <div style="display: flex; justify-content: center; align-items: center; margin-top: 10px; gap: 10px;">
+        <input id="chatInput" type="text" placeholder="输入你的消息..." style="flex:1; padding: 10px; border-radius: 5px; border: none; font-size: 16px; width: 300px;">
+        <button onclick="sendMessage()" style="padding: 10px 20px; border-radius: 5px; background-color: var(--primary-color); color: white; border: none; font-size: 16px; cursor: pointer;">发送</button>
+      </div>
+
       <button onclick="prevSlide()">上一页</button>
       <button onclick="goToHome()">回到首页</button>
     </div>
@@ -913,7 +922,7 @@ function sendMessage() {
 function sendMessage() {
   const input = document.getElementById("chatInput");
   const chatBox = document.getElementById("chatBox");
-  const userName = document.getElementById("nameInput").value || "用户";
+  const userName = document.getElementById("nameInput")?.value || "用户";
   const userMessage = input.value.trim();
   if (!userMessage) return;
 
